syntax = "proto3";
package sshardpb;

option go_package = "github.com/nathanieltornow/ostracon/shard/shardpb";


service Shard {
  rpc GetOrder(stream OrderRequest) returns (stream OrderResponse);
}

message OrderRequest {
  int64 NumOfRecords = 1;
  int64 StartLsn = 2;
}

message OrderResponse {
  int64 StartGsn = 1;
  int64 StartLsn = 2;
  int64 NumOfRecords = 3;
}

